--- a/index.html
+++ b/index.html
@@ -1,79 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haider Gallery</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Professional Music Player</title>
+  <!-- Google Material Icons -->
+  <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
+  <!-- Link to external CSS -->
+  <link rel="stylesheet" href="music-player.css" />
 </head>
-
 <body>
-    <h1>Welcome to Haider Gallery</h1>
-    <!-- Added Header -->
-    <div class="gallery">
-        <div class="gallery-item-container">
-            <img src="/Screenshot (109).png" alt="Image 1" class="gallery-item" onclick="openLightbox(); currentSlide(1)">
-            <p class="image-caption">Cold Drinks Superstore </p>
-            <!-- Caption for Image 1 -->
-        </div>
-        <div class="gallery-item-container">
-            <img src="/Screenshot (27).png" alt="Image 2" class="gallery-item" onclick="openLightbox(); currentSlide(2)">
-            <p class="image-caption">Sales Analysis Dashboard</p>
-            <!-- Caption for Image 2 -->
-        </div>
-        <div class="gallery-item-container">
-            <img src="/Screenshot (50).png" alt="Image 3" class="gallery-item" onclick="openLightbox(); currentSlide(3)">
-            <p class="image-caption">Prime Vidoes Analysis Dashboard</p>
-            <!-- Caption for Image 3 -->
-        </div>
-        <div class="gallery-item-container">
-            <img src="/Screenshot (52).png" alt="Image 3" class="gallery-item" onclick="openLightbox(); currentSlide(3)">
-            <p class="image-caption">Superstore Analysis Report</p>
-            <!-- Caption for Image 3 -->
-        </div>
-        <div class="gallery-item-container">
-            <img src="/Screenshot (74).png" alt="Image 3" class="gallery-item" onclick="openLightbox(); currentSlide(3)">
-            <p class="image-caption">Thal Superstore</p>
-            <!-- Caption for Image 3 -->
-        </div>
-        <div class="gallery-item-container">
-            <img src="/Screenshot (75).png" alt="Image 3" class="gallery-item" onclick="openLightbox(); currentSlide(3)">
-            <p class="image-caption">Thal Superstore Sales Analysis Dashboard</p>
-            <!-- Caption for Image 3 -->
-        </div>
-        <div class="gallery-item-container">
-            <img src="/Screenshot (76).png" alt="Image 3" class="gallery-item" onclick="openLightbox(); currentSlide(3)">
-            <p class="image-caption">NetFlix Analysis</p>
-            <!-- Caption for Image 3 -->
-        </div>
-        <div class="gallery-item-container">
-            <img src="/Screenshot (79).png" alt="Image 3" class="gallery-item" onclick="openLightbox(); currentSlide(3)">
-            <p class="image-caption">Malik Superstore Sales Analysis Dashboard</p>
-            <!-- Caption for Image 3 -->
-        </div>
-        <!-- Add more images as needed -->
-    </div>
+  <main class="music-player" role="main" aria-label="Music Player Application">
+    <section class="player-info" aria-live="polite">
+      <img
+        src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/665a3587-3e3d-442c-8443-1d974ec82523.png"
+        alt="Album cover art"
+        class="album-art"
+        width="320"
+        height="180"
+        loading="lazy"
+      />
+      <div class="song-details">
+        <h1 class="song-title" id="song-title">Song Title</h1>
+        <p class="song-artist" id="song-artist">Artist Name</p>
+      </div>
+    </section>
 
-    <div id="lightbox" class="lightbox">
-        <span class="close" onclick="closeLightbox()">&times;</span>
-        <div class="lightbox-content">
-            <div class="lightbox-slides">
-                <img class="lightbox-slide" src="images/image1.jpg" alt="Image 1">
-                <img class="lightbox-slide" src="images/image2.jpg" alt="Image 2">
-                <img class="lightbox-slide" src="images/image3.jpg" alt="Image 3">
-                <!-- Add more images as needed -->
-            </div>
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </div>
-    </div>
-    <footer>
-        <p>If you want to get similar work done, feel free to contact me!</p>
-        <p>WhatsApp: <a href="https://wa.me/+923207365251">+92207365251</a></p>
-    </footer>
+    <section class="player-controls" role="region" aria-label="Audio controls">
+      <audio id="audio" preload="metadata"></audio>
 
-    <script src="script.js"></script>
+      <div class="control-buttons" role="group" aria-label="Playback controls">
+        <button
+          class="material-icons control-btn"
+          id="prev-btn"
+          aria-label="Previous song"
+          type="button"
+        >
+          skip_previous
+        </button>
+        <button
+          class="material-icons control-btn"
+          id="play-pause-btn"
+          aria-label="Play"
+          type="button"
+          aria-pressed="false"
+        >
+          play_arrow
+        </button>
+        <button
+          class="material-icons control-btn"
+          id="next-btn"
+          aria-label="Next song"
+          type="button"
+        >
+          skip_next
+        </button>
+      </div>
+
+      <!-- Progress bar with current time and duration -->
+      <div class="progress-container" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" aria-label="Audio progress bar">
+        <span class="time current-time" id="current-time">0:00</span>
+        <input
+          type="range"
+          id="progress-bar"
+          min="0"
+          max="100"
+          value="0"
+          aria-valuemin="0"
+          aria-valuemax="100"
+          aria-valuenow="0"
+          aria-label="Seek audio"
+        />
+        <span class="time duration" id="duration">0:00</span>
+      </div>
+
+      <!-- Volume control -->
+      <div class="volume-control" role="group" aria-label="Volume controls">
+        <button
+          class="material-icons control-btn"
+          id="mute-btn"
+          aria-label="Mute volume"
+          type="button"
+          aria-pressed="false"
+        >
+          volume_up
+        </button>
+        <input
+          type="range"
+          id="volume-slider"
+          min="0"
+          max="1"
+          step="0.01"
+          value="1"
+          aria-label="Adjust volume"
+        />
+      </div>
+    </section>
+
+    <!-- Playlist Section -->
+    <section
+      class="playlist"
+      aria-label="Playlist"
+      aria-live="polite"
+      id="playlist"
+    >
+      <h2 class="playlist-title">Playlist</h2>
+      <ul class="playlist-list" id="playlist-list">
+        <!-- Playlist items will be dynamically added here -->
+      </ul>
+    </section>
+  </main>
+
+  <!-- Link to external JavaScript -->
+  <script src="music-player.js" defer></script>
 </body>
-
 </html>
+
